--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,12 +1,10 @@
-name: tests
+name: CI
 on: [push]
 jobs:
-
   lint:
     name: lint
     runs-on: ubuntu-22.04
     steps:
-
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
@@ -29,7 +27,6 @@ jobs:
         toolchain: ["stable", "nightly"]
 
     steps:
-
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
